Fix spacing and styling of intro and rules sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ main {
 /* Header Styles */
 
 
-/* Introdution Box Styles */
+/* Introdution & Game Rules Box Styles */
 #intro-container, #game-rules-container {
     display: flex;
     justify-content: center;
@@ -45,14 +45,26 @@ main {
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0 0 20px 20px rgba(255, 255, 0, 0.795);
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+}
+
+#game-rules p{
+    text-align: left;
 }
 
 #intro-image-container {
     overflow: hidden;
     display: flex;
     justify-content: center;
+}
+
+.play-button {
+    text-align: center;
+    background-color: darkgreen;
+    color: whitesmoke;
+    border: black 2px solid;
+    border-radius: 20px;
+    padding: 7px;
 }
